<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/selectCategory"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp">

        <Button
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_shoulders"
            android:text="@string/shoulders"
            android:textColor="#fff"
            android:layout_marginRight="40dp"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize="12sp" />

        <Button
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_triceps"
            android:paddingTop="20dp"
            android:text="@string/triceps"
            android:textColor="#fff"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Button
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_biceps"
            android:paddingTop="20dp"
            android:text="@string/biceps"
            android:textColor="#fff"
            android:layout_marginRight="40dp"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />

        <Button
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_chest"
            android:paddingTop="20dp"
            android:text="@string/chest"
            android:textColor="#fff"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Button
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_back"
            android:paddingTop="20dp"
            android:text="@string/back"
            android:textColor="#fff"
            android:layout_marginRight="40dp"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />

        <Button
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_legs"
            android:paddingTop="20dp"
            android:text="@string/legs"
            android:textColor="#fff"
            tools:ignore="ButtonStyle,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_abs"
            android:paddingTop="20dp"
            android:text="@string/abs"
            android:textColor="#fff"
            android:layout_marginRight="40dp"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />

        <Button
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle"
            android:drawableTop="@drawable/ic_cardio"
            android:paddingTop="20dp"
            android:text="@string/cardio"
            android:textColor="#fff"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded"
            android:layout_height="90dp"
            android:layout_width="90dp" />
    </LinearLayout>


</LinearLayout>
